UI testing attempts (#86)
*Implement ui tests foe login form